--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Snapchat-1318943492.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Narmadha k</h1>
             <p>Bsc Computerscience</p>
         </div>
